Kafka configuration and properties file configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=notification-validator
+
+# Kafka Settings
+kafka.bootstrap-server=9099
+kafka.consumer.group-id=notification-validator-group
+kafka.consumer.auto-offset-reset=earliest
+kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+kafka.consumer.properties.spring.json.trusted.packages=*
+
+kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+
+
+server.port=7072
+
+logging.level.root=INFO
+loggin.level.org.springframework=INFO
